--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   </head>
   <body class="light-theme">
     <h1>Task List</h1>
-    <p id="msg">Current tasks:</p>
+    <p id="msg">is it Ethan's Bday?:</p>
     <ul>
-      <li class="list">Add visual styles</li>
-      <li class="list">I dont know why this isnt working!</li>
-      <li>Enable switching the theme</li>
+      <li class="list">Ethan is a hell of a fellah!</li>
+      <li class="list">We like him!</li>
+      <li> Mostly..</li>
     </ul>
     <div>
         <button class="btn">Dark</button>
