--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles1.css">
   </head>
   <body class="light-theme">
-    <h1>Task List</h1>
+    <h1>Birthday Detection Software</h1>
     <p id="msg">is it Ethan's Bday?:</p>
     <ul>
       <li class="list">Ethan is a hell of a fellah!</li>
@@ -16,7 +16,7 @@
       <li> Mostly..</li>
     </ul>
     <div>
-        <button class="btn">Dark</button>
+        <button class="btn">click me to find out</button>
     </div>
     <script src="app1.js"></script>
   </body>
