--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <li> Mostly..</li>
     </ul>
     <div>
-        <button class="btn">click me to find out</button>
+        <button id="ethan" class="btn">click me to find out</button>
     </div>
     <script src="app1.js"></script>
   </body>
