--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <div>
         <button class="btn">click me to find out</button>
     </div>
+    <p id="demo"></p>
     <script src="app1.js"></script>
   </body>
 </html>
