--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <p id="demo"></p>
 
     <script>
-    document.getElementById("myBtn").addEventListener("click", function() {
+    document.getElementById("btn").addEventListener("click", function() {
       document.getElementById("demo").innerHTML = "Happy Birthday";
     });
     </script>
